--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -1,14 +1,68 @@
-#abc {
+#test {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 200px;
   height: 200px;
-  background-color: aqua;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  background-color: #ccc;
+  border-radius: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-#abc span {
-  color: crimson;
-  font-size: 30px;
+.box .clip {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border: 10px solid #ccc;
+  border-radius: 50%;
+  clip: rect(0, 200px, 200px, 100px);
+}
+.box .clip .left {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  border: 10px solid #1f72ff;
+  border-radius: 50%;
+  clip: rect(0 100px 200px 0);
+  top: -10px;
+  left: -10px;
+}
+.box .clip .right {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  border: 10px solid #1f72ff;
+  border-radius: 50%;
+  clip: rect(0 200px 200px 100px);
+  top: -10px;
+  left: -10px;
+}
+.box .clip .width-none {
+  width: 0;
+}
+.num {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: #fff;
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  line-height: 180px;
+  font-size: 32px;
+}
+.auto {
+  clip: auto;
 }
 
 /*# sourceMappingURL=index.css.map */
